# cpp_template

./: .gitignore  Dockerfile
src/: CMakeLists.txt  cmake_build.sh  main.cpp
src/conan/: conan_install.sh  conanfile.txt
